Closed
Bug 1356392
Opened 9 years ago
Closed 9 years ago
Use release assert in EnumSerializer::Write
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: mccr8, Assigned: mccr8)
References
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
kanru
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
It seems slightly goofy to send a value we know will just kill the other process. This also seems like a decent indication that we're sending uninitialized values, which is bad. I can't imagine the overhead is too high.
| Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8858134 [details]
Bug 1356392 - Use a release assert in EnumSerializer::Write.
https://reviewboard.mozilla.org/r/130092/#review132700
Attachment #8858134 -
Flags: review?(kchen) → review+
Pushed by amccreight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/31430ca292f2
Use a release assert in EnumSerializer::Write. r=kanru
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8858134 [details]
Bug 1356392 - Use a release assert in EnumSerializer::Write.
Approval Request Comment
[Feature/Bug causing the regression]: none
[User impact if declined]: this will cause some crashes to be easier to analyze, and paper over some security issues
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes, it did not turn up any new issues.
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: it just runs a check we are already running earlier
[String changes made/needed]: none
Attachment #8858134 -
Flags: approval-mozilla-beta?
Updated•9 years ago
|
status-firefox54:
--- → affected
Comment 7•9 years ago
|
||
Comment on attachment 8858134 [details]
Bug 1356392 - Use a release assert in EnumSerializer::Write.
Help debug crash issue. Beta54+. Should be in 54 beta 1.
Attachment #8858134 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•9 years ago
|
||
| bugherder uplift | ||
Comment 9•9 years ago
|
||
(In reply to Andrew McCreight [:mccr8] from comment #6)
> [Is this code covered by automated tests?]: yes
> [Has the fix been verified in Nightly?]: yes, it did not turn up any new
> issues.
> [Needs manual test from QE? If yes, steps to reproduce]: no
Setting qe-verify- based on Andrew's assessment on manual testing needs and the fact that this fix has automated coverage.
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•