Bug 1356392 - Use a release assert in EnumSerializer::Write. r=kanru, a=gchang

MozReview-Commit-ID: JqnwuT3nn9q

--HG--
extra : source : 31430ca292f20731880b4b0035c72b74c95e9b19